<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <groupId>com.github.andrestubbe</groupId>
    <artifactId>fastterminal-demo</artifactId>
    <version>0.1.0</version>
    <packaging>jar</packaging>
    
    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    
    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>
    
    <dependencies>
        <dependency>
            <groupId>io.github.andrestubbe</groupId>
            <artifactId>fastcore</artifactId>
            <version>1.0.0</version>
        </dependency>
        <dependency>
            <groupId>com.github.andrestubbe</groupId>
            <artifactId>fastterminal</artifactId>
            <version>0.1.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/../../target/fastterminal-0.1.0.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>io.github.andrestubbe</groupId>
            <artifactId>fastmouse</artifactId>
            <version>0.1.0</version>
        </dependency>
        <dependency>
            <groupId>com.github.andrestubbe</groupId>
            <artifactId>fastemojis</artifactId>
            <version>0.1.0</version>
        </dependency>
        <dependency>
            <groupId>com.github.andrestubbe</groupId>
            <artifactId>fastansi</artifactId>
            <version>0.1.0</version>
        </dependency>
    </dependencies>
    
    <build>
        <sourceDirectory>src/main/java</sourceDirectory>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <mainClass>fastterminal.Demo</mainClass>
                    <commandlineArgs>--enable-native-access=ALL-UNNAMED</commandlineArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
